Fix z-index issue for inline code background

--- a/resources/ts/components/WorkbenchLayout.module.css
+++ b/resources/ts/components/WorkbenchLayout.module.css
@@ -19,7 +19,6 @@
     margin: var(--spacing-half) 0;
     position: relative;
     word-break: break-all;
-    z-index: 1;
 
     &:after {
       background-color: #eeeeeeaa;
